--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-switch": "^2.0.0",
     "react-native-web": "~0.11.7"
   },
